updating default forestry configuration and tests.
changing next-round to wait url.  need to add client-side polling there.

--- a/vcweb/forestry/templates/forestry/instructions.html
+++ b/vcweb/forestry/templates/forestry/instructions.html
@@ -22,8 +22,8 @@ can harvest a maximum of 5 units and a minimum of 0 units from the resource.
 We will first start with two practice rounds.
 </p>
 
-<form action="next-round" method="post">
-    <input type='submit' value='Continue to the next round'/>
+<form action="wait" method="post">
+    <input type='submit' value='Continue'/>
 </form>
 {% endblock content %}
 
