--- a/vcweb/forestry/templates/forestry/participate.html
+++ b/vcweb/forestry/templates/forestry/participate.html
@@ -21,7 +21,7 @@ $(function() {
 </script>
 {% endblock %}
 {% block title %}
-Participating in {{ experiment }}
+Participating in {{ experiment }} {{experiment.status_line}}
 {% endblock %}
 
 {% block content %}
