--- a/vcweb/core/templates/experimenter-index.html
+++ b/vcweb/core/templates/experimenter-index.html
@@ -1,45 +1,43 @@
 {% extends "base-experimenter.html" %}
 
-{% block title %} 
-    Virtual Commons Web Experimenter Interface 
-{% endblock %} 
+{% block title %}Virtual Commons Web Experimenter Interface{% endblock %}
 
-{% block header %}
-    {% include "includes/experimenter-nav-menu.inc" %}
-{% endblock header %}
+{% block header %} {% include "includes/experimenter-nav-menu.inc" %} {% endblock header %}
 
 {% block page %}
-    {{ block.super }}
+{{ block.super }}
+<h3>Experimenter Dashboard</h3>
+<div id='navmenu'>
+    <a href='/admin'>add / configure an experiment</a>
+    <a href='/admin'>download data</a> 
+    <a href='http://commons.asu.edu/contact'>report a bug</a>
+</div>
+<hr/>
+<div class='notice'>
+    Welcome to the experimenter interface.  You are logged in as {{request.user.experimenter}}.
+    <br/>
+    {% comment%}
+    FIXME: replace with horizontal ul+li iconified nav menu
+    {% endcomment %}
+</div>
 
-    <div class='notice'>
-        Welcome to the experimenter interface.  You are logged in as {{request.user.experimenter}}.
-        <br/>
-        <br/>
-        {% comment%}
-            FIXME: replace with horizontal ul+li iconified nav menu
-        {% endcomment %}
-        <a href='/admin'>add / configure an experiment</a> | 
-        <a href='/admin'>download data</a> |
-        <a href='http://commons.asu.edu/contact'>report a bug</a>
+<h3>Your experiments</h3>
+<div id="post">
+    {% if experiments %}
+    {% for e in experiments %}
+    <div class='info'>
+    {{e}} {{e.status_line}}<br/>
+    <ul class='horizontal' id='horizontal'>
+        <li ><a href='{{e.monitor_url}}'><img src='/static/images/famfamfam/zoom.png' alt=''/> monitor</a></li>
+        <li ><a class='confirm-experiment-action' style='background-image:none;' href='{{e.stop_url}}'><img src='/static/images/famfamfam/stop.png' alt=''/> stop</a></small></li>
+    </ul>
+    {% endfor %}
+    </ul>
+    {% else %}
+    <div class='info'>
+        You are not currently running any experiments.
     </div>
-
-    <div id="post">
-        <fieldset>
-            <legend>Your experiments</legend>
-            {% if experiments %}
-                <ul>
-                    {% for e in experiments %}
-                        <li>
-                        {{e}} {{e.status_line}}<br/> <small><a href='{{e.monitor_url}}'>monitor</a> | <a href='{{e.management_url}}'>manage</a></small>
-                        </li>
-                    {% endfor %}
-                </ul>
-            {% else %}
-                <div class='info'>
-                    You are not currently running any experiments.
-                </div>
-            {% endif %}
-        </fieldset>
-    </div>
+    {% endif %}
+</div>
 {% endblock page %}
 
