--- a/vcweb/static/css/style.css
+++ b/vcweb/static/css/style.css
@@ -72,6 +72,20 @@ legend {
    margin-bottom: 8px;
 }
 
+ul.experiments {
+   list-style: none;
+   margin: 0;
+   padding: 0;
+}
+
+
+li.rightArrow {
+   margin: 0;
+   background: url('/static/images/famfamfam/bullet_go.png') center left no-repeat;
+   padding-left: 16px;
+   padding-right: 8px;
+}
+
 ul.horizontal {
    list-style: none;
    display: block;
