--- a/vcweb/core/templates/participant-index.html
+++ b/vcweb/core/templates/participant-index.html
@@ -5,7 +5,7 @@ Virtual Commons Web Participant Interface
 {% endblock %}
 
 {% block page %}
-<div class='notice'>
+<div class='info'>
     Welcome back, {{participant}}.
 </div>
 
@@ -16,7 +16,7 @@ Virtual Commons Web Participant Interface
     <h3>{{experiment_status|title}}</h3>
     <ul id='experiments'>
         {% for experiment in experiments %}
-        <li class='{{experiment_status|lower}}'> <a href='{{ experiment.participant_url }}'>{{ experiment.status_line }}</a></li>
+        <li class='{{experiment_status|lower}}'> <a href='{{ experiment.participant_url }}'>{{ experiment.status_line }}, created {{experiment.date_created|date:"SHORT_DATETIME_FORMAT"}}</a></li>
         {% empty %}
         <li class='alert'> No {{ experiment_status|lower }} experiments </li>
         {% endfor %}
