--- a/vcweb/forestry/templates/forestry/wait.html
+++ b/vcweb/forestry/templates/forestry/wait.html
@@ -31,8 +31,18 @@ Forestry Experiment Round {{ experiment.current_round.round_number }}
 <div id='timeLeft' class='info infoIcon'>
     Time remaining: <span id='timeRemaining'>{{ experiment.time_remaining }}</span>
 </div>
-{% endif %}    
-<div class='alert'>
+{% else %}
+The facilitator will start the next round when every participant is ready.
+<div class='info'>
+    <a class='contactIcon' href>send a private message to the facilitator</a>
+</div>
+{% endif %}
 
+<h3>Instructions</h3>
+<div class='info'>
+    Please wait until the next round begins.
+    {% comment%}
+    add ajax spinner and polling
+    {% endcomment %}
 </div>
 {% endblock %}
